--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "server": "cd backend && yarn server",
-    "start": "cd frontend && yarn start"
+    "server": "cd backend && npm run server",
+    "start": "cd frontend && npm start"
   },
   "devDependencies": {
     "@angular/core": "^13.0.3"
